nginx-scaling/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nginx-route
  labels:
    app: nginx
spec:
  to:
    kind: Service
    name: nginx-service
  port:
    targetPort: 9090
